# flare-core-untrusted

./: Cargo.toml  README.flare.md
src/: aggregator.rs  cache.rs  cache_tracker.rs  context.rs  dependency.rs  env.rs  error.rs  executor.rs  lib.rs  map_output_tracker.rs  partitioner.rs  serializable_traits.rs  serialization_free.rs
src/capnp/: serialized_data.capnp
src/io/: local_file_reader.rs  mod.rs
src/partial/: approximate_action_listener.rs
src/rdd/: cartesian_rdd.rs  co_grouped_rdd.rs  coalesced_rdd.rs  flatmapper_rdd.rs  join_rdd.rs  map_partitions_rdd.rs  mapper_rdd.rs  pair_rdd.rs  parallel_collection_rdd.rs  partitionwise_sampled_rdd.rs  rdd.rs  shuffled_rdd.rs  union_rdd.rs  zip_rdd.rs
src/scheduler/: base_scheduler.rs  distributed_scheduler.rs  job.rs  local_scheduler.rs  result_task.rs  stage.rs  task.rs
src/shuffle/: mod.rs  shuffle_fetcher.rs  shuffle_manager.rs  shuffle_map_task.rs
src/utils/: mod.rs  random.rs
src/utils/date/: date_tuple.rs  month_tuple.rs
tests/: test_rdd.rs
