[package]
name = "vega"
version = "0.1.0"
authors = ["raja <rajasekar3eg@gmail.com>", "Xiang Li <Xiang.Leee@outlook.com>"]
edition = "2018"

build = "build.rs"

[lib]
name = "vega"

[features]
aws_connectors = ["rusoto_core", "rusoto_s3"]

[dependencies]
async-trait = "0.1.30"
crossbeam = "0.7.3"
dashmap = "4"
envy = "^0.4.1"
fasthash = "0.4.0"
futures = { version = "0.3.4" }
hyper = { version = "0.14.19", features = ["client", "server", "http2", "tcp"]}
http = "0.2.8"
itertools = "0.9.0"
log = "0.4.8"
lazy_static = "1.4.0"
libc = "0.2"
num_cpus = "1.13.0"
ordered-float = "2.0"
once_cell = "1.3.1"
parking_lot = { version = "0.10.2", features = ["serde"] }
simplelog = "0.7.5"
statrs = "0.12.0"
thiserror = "1.0.15"
threadpool = "1.7.1"
toml = "0.5.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "0.8", features = ["v4"] }
regex = "1.3.6"

# randomness
rand = "0.7.3"
rand_distr = "0.2"
rand_pcg = "0.2"

# serialization
bincode = "1.2.1"
capnp = "0.14.6"
capnp-futures = "0.14.1"
serde = { version = "1.0.125", features = ["rc"] }
serde_closure = { git = "https://github.com/AmbitionXiang/serde_closure", branch = "master" }
serde_derive = "1.0.125"
uriparse = "0.6.1"

# encryption
aes-gcm = "0.8.0"

# dynamic typing
downcast-rs = "1.1.1"
dyn-clone = "1.0.1"
serde_traitobject = "0.2.7"

# optional features
## aws
rusoto_core = { version = "0.43", optional = true }
rusoto_s3 = { version = "0.43", optional = true }

# rust sgx sdk
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }

[build-dependencies]
capnpc = "0.14"

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] } 
chrono = "0.4.11"
parquet = "0.15.1"
tempfile = "3"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }